<resources>
    <string name="app_name">RaspBlockControl</string>
    <string name="hint_tv_ip_adr">IP Address</string>
    <string name="hint_tv_port">Port</string>
    <string name="hint_tv_username">Username</string>
    <string name="hint_tv_password">Password</string>
    <string name="text_btn_conn">Connect!</string>
    <string name="connect_to_raspblock">Connect to\nRaspblock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appname">Raspblocks Control Platform (Android)</string>
</resources>